<resources>
                <string name="text_box_my_location">My location</string>
                <string name="text_box_start_location_hint">Start location</string>
                <string name="text_box_end_location_hint">End location</string>
                <string name="text_box_need_to_place_marker">Add a position marker&#8230;</string>
                <string name="text_box_close_to_marker">Marker, close to</string>
                <string name="text_box_dialog_choose_location_type_start">Choose start location</string>
                <string name="text_box_dialog_choose_location_type_end">Choose end location</string>
                <string name="text_box_dialog_location_type_current_location">Current location</string>
                <string name="text_box_dialog_location_type_contact">Contact address</string>
                <string name="text_box_dialog_location_type_map_point">Point on map</string>
                <string name="text_box_dialog_location_type_favourite">Favourite locations</string>
            <string name="text_box_virtual_keyboard_done_label">GO!</string>
        <string name="map_markers_start_marker_title">Route start</string>
        <string name="map_markers_start_marker_description">Long press to drag&#8230;</string>
        <string name="map_markers_end_marker_title">Route end</string>
        <string name="map_markers_end_marker_description">Long press to drag&#8230;</string>
                <string name="map_markers_mode_bicycle_action">Ride</string>
                <string name="map_markers_mode_walk_action">Walk</string>
                <string name="map_markers_connector_before_stop">from</string>
                <string name="map_markers_connector_before_destination">to</string>
                <string name="map_markers_warning_live_udpates">Live updates</string>
                <string name="map_markers_warning_live_upates_on_time">On time</string>
                <string name="map_markers_warning_live_upates_early_arrival">early</string>
                <string name="map_markers_warning_live_upates_late_arrival">delay</string>
                <string name="map_markers_bike_rental_available_spaces">Slots:</string>
                <string name="map_markers_bike_rental_available_bikes">Bikes:</string>
                <string name="toast_map_markers_start_marker_activated">Start location</string>
                <string name="toast_map_markers_end_marker_activated">End location</string>
                <string name="toast_map_markers_marker_out_of_boundaries">Location outside of network boundaries. Marker not set.</string>
                <string name="toast_metadata_request_successful">Transit service downloaded</string>
                <string name="toast_server_checker_successful">OK: Region is working</string>
                <string name="toast_bike_rental_load_request_successful">Bike rental stations downloaded</string>
                <string name="toast_server_selector_detected">Found</string>
                <string name="toast_server_selector_server_change_info">Change in Settings</string>
                <string name="toast_address_location_added_favourites">Location added to favourites.</string>
                    <string name="toast_tripplanner_need_to_place_markers_before_planning">Set an origin and destination first</string>
                    <string name="toast_tripplanner_origin_destination_are_equal">Can\'t plan: origin and destination are the same"</string>
                    <string name="toast_server_selector_refresh_server_list_error">Couldn\'t get region list</string>
                    <string name="toast_bike_rental_load_request_error">Couldn\'t get bike rental stations</string>
                    <string name="toast_no_server_selected_error">No region selected</string>
                    <string name="toast_server_checker_error_unreachable">Unable to contact region:</string>
                    <string name="toast_server_checker_info_error">Attention: Cannot obtain region info!</string>
                        <string name="toast_server_checker_error_unreachable_detected_server">Your region server is not working. Please try again later.</string>
                    <string name="toast_server_checker_error_bad_url">Bad URL for custom region</string>
                    <string name="toast_tripplanner_current_location_error">Can\'t find current location</string>
                    <string name="toast_realtime_updates_fail">Realtime updates not available for this trip, times might be outdated</string>
                    <string name="toast_address_location_empty">There is nothing to add.</string>
                    <string name="toast_address_location_already_stored">Address is already saved.</string>
                <string name="task_progress_tripplanner_progress">Planning trip. Please wait&#8230;</string>
                <string name="task_progress_server_selector_progress">Finding transit service. Please wait&#8230;</string>
                <string name="task_progress_server_checker_progress">Getting region info. Please wait&#8230;</string>
                <string name="task_progress_geocoding_progress">Finding points-of-interest. Please wait&#8230;</string>
                <string name="task_progress_metadata_progress">Finding transit service. Please wait&#8230;</string>
                <string name="tripplanner_results_title">Planning Results</string>
                    <string name="point_type_selector_title">Choose location</string>
                    <string name="point_type_selector_start_marker_option">Start location</string>
                    <string name="point_type_selector_end_marker_option">End location</string>
                    <string name="point_type_selector_street_view_option">Street view</string>
                    <string name="geocoder_results_title">Search Results</string>
                    <string name="geocoder_results_no_results_message">Sorry, a location for this address couldn\'t be found.</string>
                    <string name="server_checker_info_title">OpenTripPlanner Region</string>
                    <string name="server_checker_info_region">Region:</string>
                    <string name="server_checker_info_language">Language:</string>
                    <string name="server_checker_info_contact">Contact:</string>
                    <string name="server_checker_info_url">URL:</string>
                    <string name="server_checker_info_bounds">Bounds:</string>
                    <string name="server_checker_info_bike_rental">Bike rental service:</string>
                    <string name="server_checker_info_reachable">Online:</string>
                    <string name="server_checker_info_custom_server_name">Custom region</string>
                    <string name="server_checker_info_custom_server_unknown_region">Unknown</string>
                    <string name="server_checker_info_custom_server_unknown_bounds">Unknown</string>
            <string name="settings_menu_advanced">Advanced</string>
            <string name="settings_menu_routing_options">Routing</string>
            <string name="settings_menu_wheelchair_accessible">Wheelchair accessible</string>
            <string name="settings_menu_wheelchair_accessibility_description">Find wheelchair-friendly routes</string>
            <string name="settings_menu_maximum_walk">Maximum walk distance</string>
            <string name="settings_menu_location_preference_category_title">Location</string>
            <string name="settings_menu_auto_detect_server">Automatic region</string>
            <string name="settings_menu_auto_detect_server_description">Sets your current transit region based on your current location</string>
            <string name="settings_menu_refresh_server_list">Refresh region list</string>
            <string name="settings_menu_use_device_timezone">Use device timezone</string>
            <string name="settings_menu_use_device_timezone_description">Ignores the timezone of the selected region</string>
                <string name="settings_menu_location_advanced_preference_category_summary">Set your own region using a URL</string>
                <string name="settings_menu_custom_server_url">Custom region URL</string>
                <string name="settings_menu_custom_server_select_title">Custom region</string>
                <string name="settings_menu_custom_server_select_description">Set the region using a custom URL</string>
            <string name="settings_menu_map_options">Map</string>
            <string name="settings_menu_map_tile_provider">Map tile provider</string>
            <string name="settings_menu_geocoder_preference_category_title">Address &amp; Point-of-Interest Search</string>
            <string name="settings_menu_geocoder_preference_provider_title">Search provider</string>
            <string name="settings_menu_geocoder_advanced_preference_category_summary">Modify geocoder default behavior</string>
                <string name="settings_menu_use_android_geocoder_title">Prefer Android geocoder</string>
                <string name="settings_menu_use_android_geocoder_description">Try Android geocoder first for all searches</string>
                <string name="settings_menu_use_intelligent_markers_title">Intelligent markers</string>
                <string name="settings_menu_use_intelligent_markers_description">Move markers to the closer address or Point-Of-Interest</string>
            <string name="settings_menu_live_updates_category_title">Live updates</string>
            <string name="settings_menu_live_updates">Itinerary Updates</string>
            <string name="settings_menu_live_updates_description">Notify me when trip times change</string>
            <string name="settings_menu_about_category">About</string>
            <string name="settings_menu_about">About OpenTripPlanner for Android</string>
            <string name="settings_menu_feedback">Send Feedback</string>
            <string name="settings_menu_about_description">License and acknowledgements</string>
            <string name="about_screen_app_full_name">OpenTripPlanner for Android</string>
            <string name="about_screen_app_description">An Android app for multi-modal trip planning and navigation using any OpenTripPlanner server.
See more details at <a href="https://github.com/CUTR-at-USF/OpenTripPlanner-for-Android/wiki">GitHub project page</a>.
</string>
            <string name="about_screen_header_acknowledgements">Acknowledgements</string>
            <string name="about_screen_header_license">License</string>
        <string name="about_screen_acknowledgements">"We'd like to thank the following people for contributing to the project:\n
Marcy Gordon\n
Khoa Tran\n
Sean Barbeau (sjbarbeau@gmail.com)\n
Vreixo Gonzalez\n
Thanks to <a href="http://thenounproject.com">thenounproject.com</a> for the mode icons used in
the buttons and
<a href="http://mapicons.nicolasmollet.com">Nicollas Mollet \"Maps Icons Collection\"</a>
for the map icons.\n Thanks to the Google Summer of Code program for funding development during the
summer of 2013!
This app uses \"Google Play Services Maps API V2\", press below to see license terms."</string>
        <string name="about_screen_button_play_services_license">Play Services license</string>
        <string name="about_screen_license_apache">"Copyright (C) 2010-2014 University of South Florida
and individual contributors.\n
All rights reserved.\n
Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
in compliance with the License. You may obtain
<a href="http://www.apache.org/licenses/LICENSE-2.0">here</a> a copy of the license.\n
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied."</string>
</resources>